--- a/arxiv.ipynb
+++ b/arxiv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download(keywords):\n",
-    "    url = 'https://arxiv.org/list/gr-qc/new'\n",
+    "def download(keywords,category='gr-qc'):\n",
+    "    #create a directory in the name of date\n",
+    "    dir_name = str(datetime.date.today())\n",
+    "    dir_path = dir_name+'/'+category\n",
+    "    if os.path.exists(dir_path):\n",
+    "        print('Already exist!')\n",
+    "    else:\n",
+    "        os.makedirs(dir_path)\n",
+    "    url = 'https://arxiv.org/list/%s/new' %category\n",
     "    headers = {'User-Agent':'Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_8; en-us) AppleWebKit/534.50 (KHTML, like Gecko) Version/5.1 Safari/534.50'}\n",
-    "    html = requests.get(url).content \n",
+    "    html = requests.get(url).content #add .decode('utf-8') for python 3 \n",
     "    titles = re.findall(r'<div class=\"list-title mathjax\">(.*?)</div>',html,re.S)\n",
     "    links = re.findall(r'<span class=\"list-identifier\">(.*?)</span>',html,re.S)\n",
     "    articles = []\n",
@@ -63,7 +70,7 @@
     "        for keyword in keywords:\n",
     "            if keyword in map(lambda x:x.lower(),article['Title'].split(' ')):\n",
     "                art_html = requests.get(article['Link'])\n",
-    "                fp = io.open('%s/%s.pdf'%(dir_name,article['Title']),'wb')\n",
+    "                fp = io.open('%s/%s.pdf'%(dir_path,article['Title']),'wb')\n",
     "                fp.write(art_html.content)\n",
     "                fp.close()\n",
     "                j += 1\n",
@@ -71,7 +78,6 @@
     "            else:\n",
     "                pass\n",
     "        pbar.update(10 * i + 1)\n",
-    "        time.sleep(0.05)\n",
     "        i += 1\n",
     "\n",
     "    pbar.finish()\n",
@@ -81,14 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already exist!\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Progress: 100% |##############| Elapsed Time: 0:02:36 Time: 0:02:36   3.01  B/s\r"
+      "Progress: 100% |##############| Elapsed Time: 0:03:02 Time: 0:03:02   2.57  B/s\r"
      ]
     },
     {
@@ -97,8 +110,8 @@
      "text": [
       "**************************************************\n",
       "17 artilce(s) have(has) been downloaded, enjoy yourself!\n",
-      "CPU times: user 1.41 s, sys: 447 ms, total: 1.86 s\n",
-      "Wall time: 2min 38s\n"
+      "CPU times: user 1.41 s, sys: 460 ms, total: 1.87 s\n",
+      "Wall time: 3min 19s\n"
      ]
     },
     {
@@ -111,8 +124,53 @@
    ],
    "source": [
     "keywords = ['gravitational','wave','black','hole','waveform']\n",
+    "category = 'gr-qc'\n",
     "if __name__ == '__main__':\n",
     "    %time download(keywords=keywords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://arxiv.org/list/gr-qc/new'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category = 'gr-qc'\n",
+    "cat_new = 'https://arxiv.org/list/%s/new' %cat\n",
+    "cat_new "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2019-04-23/gr-qc'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category='gr-qc'\n",
+    "dir_name = str(datetime.date.today())\n",
+    "dir_name+'/'+category"
    ]
   },
   {
