--- a/arxiv.ipynb
+++ b/arxiv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,36 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already exist!\n"
-     ]
-    }
-   ],
-   "source": [
-    "#create a directory in the name of date\n",
-    "dir_name = str(datetime.date.today())\n",
-    "if os.path.exists(dir_name):\n",
-    "    print('Already exist!')\n",
-    "else:\n",
-    "    os.makedirs(dir_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def download(keywords,category='gr-qc'):\n",
-    "    #create a directory in the name of date\n",
-    "    dir_name = str(datetime.date.today())\n",
-    "    dir_path = dir_name+'/'+category\n",
+    "    #create a directory in the name of date and category\n",
+    "    dir_path = str(datetime.date.today())+'/'+category\n",
     "    if os.path.exists(dir_path):\n",
     "        print('Already exist!')\n",
     "    else:\n",
@@ -58,7 +35,7 @@
     "    links = re.findall(r'<span class=\"list-identifier\">(.*?)</span>',html,re.S)\n",
     "    articles = []\n",
     "    for i in range(len(titles)):\n",
-    "        title = titles[i][titles[i].rfind('>')+2:].strip()\n",
+    "        title = titles[i][titles[i].rfind('>')+2:].strip() \n",
     "        link = 'https://arxiv.org%s' %links[i][links[i].find('/pdf'):links[i].find('/pdf')+15]\n",
     "        articles.append({'Title':title,'Link':link})\n",
     "    widgets = ['Progress: ',Percentage(), ' ', Bar('#'),' ', Timer(),  \n",
@@ -81,27 +58,20 @@
     "        i += 1\n",
     "\n",
     "    pbar.finish()\n",
-    "    print('*'*50)\n",
+    "    print('*'*60)\n",
     "    print('{} artilce(s) have(has) been downloaded, enjoy yourself!'.format(j))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already exist!\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Progress: 100% |##############| Elapsed Time: 0:03:02 Time: 0:03:02   2.57  B/s\r"
+      "Progress: 100% |##############| Elapsed Time: 0:01:43 Time: 0:01:43   8.24  B/s\r"
      ]
     },
     {
@@ -109,9 +79,9 @@
      "output_type": "stream",
      "text": [
       "**************************************************\n",
-      "17 artilce(s) have(has) been downloaded, enjoy yourself!\n",
-      "CPU times: user 1.41 s, sys: 460 ms, total: 1.87 s\n",
-      "Wall time: 3min 19s\n"
+      "12 artilce(s) have(has) been downloaded, enjoy yourself!\n",
+      "CPU times: user 1.2 s, sys: 405 ms, total: 1.6 s\n",
+      "Wall time: 1min 45s\n"
      ]
     },
     {
@@ -124,53 +94,10 @@
    ],
    "source": [
     "keywords = ['gravitational','wave','black','hole','waveform']\n",
-    "category = 'gr-qc'\n",
+    "category1 = 'gr-qc'\n",
+    "category2 = 'astro-ph'\n",
     "if __name__ == '__main__':\n",
-    "    %time download(keywords=keywords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://arxiv.org/list/gr-qc/new'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "category = 'gr-qc'\n",
-    "cat_new = 'https://arxiv.org/list/%s/new' %cat\n",
-    "cat_new "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2019-04-23/gr-qc'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "category='gr-qc'\n",
-    "dir_name = str(datetime.date.today())\n",
-    "dir_name+'/'+category"
+    "    %time download(keywords=keywords,category=category2)"
    ]
   },
   {
